src/Utils/Docker/Neuer Ordner/namespace.yml
kind: Namespace  
apiVersion: v1  
metadata:  
 name: my-namespace  
 labels:  
   name: my-namespace
