src/Utils/Docker/Neuer Ordner/blazorboilerplate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/bb-network: "true"
    io.kompose.service: blazorboilerplate
  name: blazorboilerplate
spec:
  containers:
  - env:
    - name: ASPNETCORE_ENVIRONMENT
      value: Development
    - name: ASPNETCORE_Kestrel__Certificates__Default__Password
      value: Admin123
    - name: ASPNETCORE_Kestrel__Certificates__Default__Path
      value: aspnetapp.pfx
    - name: ASPNETCORE_URLS
      value: https://+:443;http://+80
    - name: BlazorBoilerplate__ApplicationUrl
      value: blazorboilerplate
    - name: BlazorBoilerplate__CertificatePassword
      value: Admin123
    - name: BlazorBoilerplate__IS4ApplicationUrl
      value: blazorboilerplate
    - name: BlazorBoilerplate__UseSqlServer
      value: "true"
    - name: ConnectionStrings__DefaultConnection
      value: Server=10.1.98.202;Database=blazor_boilerplate;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa;Password=yourVeryStrong(!)Password;Integrated
        Security=false
    - name: Serilog__MinimumLevel__Default
      value: Debug
    image: alexhda/omaml-frontend:latest
    name: blazorboilerplate
    ports:
    - containerPort: 80
    - containerPort: 443
    resources:
      limits:
        cpu: "3"
        memory: "4194304e3"
  restartPolicy: OnFailure
status: {}
