src/Utils/Docker/Neuer Ordner/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: controller
  name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: controller
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: controller
    spec:
      containers:
      - env:
        image: alexhda/omaml-controller
        imagePullPolicy: ""
        name: controller
        ports:
        - containerPort: 1433
        resources:
          limits:
            cpu: "2"
            memory: "2097152e3"
        volumeMounts:
        - mountPath: /var/opt/omaml
          name: omamldata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: omamldata
        persistentVolumeClaim:
          claimName: omamldata
status: {}
