src/Utils/Docker/Neuer Ordner/blazorboilerplate-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: blazorboilerplate
  name: blazorboilerplate
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
  - name: "53415"
    port: 53415
    protocol: TCP
    targetPort: 80
  - name: "53443"
    port: 53443
    protocol: TCP
    targetPort: 443
  selector:
    io.kompose.service: blazorboilerplate
status:
  loadBalancer: {}
