src/Utils/Docker/Neuer Ordner/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: controller
  name: controller
spec:
  type: ClusterIP
  ports:
  - name: "50101"
    port: 50101
    protocol: TCP
    targetPort: 5001
  selector:
    io.kompose.service: controller
status:
  loadBalancer: {}
