src/Utils/Docker/Neuer Ordner/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sqlserver
  name: sqlserver
spec:
  ports:
  - name: "1533"
    port: 1533
    targetPort: 1433
  selector:
    io.kompose.service: sqlserver
status:
  loadBalancer: {}
