src/Utils/Docker/Neuer Ordner/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: blazorboilerplate-ingress
spec:
  rules:
  - host: 141.100.60.107
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
             name: blazorboilerplate
             port:
               number: 53415
